# ngk2022s-konshinkai-python-cli

./: README.md  assign_table.py  pyproject.toml  user-out.csv
examples/: input.csv  output.csv
